# pantheon-agent-geoclue2

./: .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: CMakeLists.txt  io.elementary.desktop.agent-geoclue2-daemon.desktop.in  io.elementary.desktop.agent-geoclue2.appdata.xml.in  io.elementary.desktop.agent-geoclue2.deskop.in.in  io.elementary.desktop.agent-geoclue2.desktop.in  io.elementary.desktop.agent-geoclue2.desktop.in.in  io.elementary.desktop.agent-geoclue2.gschema.xml  meson.build  org.pantheon.agent-geoclue2.desktop.in.in  org.pantheon.agent-geoclue2.gschema.xml
debian/: changelog  control  copyright  install  pantheon-agent-geoclue2.desktop  pantheon-agent-geoclue2.transform  rules  transform_geoclue.conf.pantheon  transform_geoclue.conf.pantheon-agent
po/: CMakeLists.txt  POTFILES  aa.po  ab.po  ace.po  ak.po  am.po  an.po  ar.po  ay.po  az.po  ba.po  bg.po  bh.po  bn.po  bs.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  fi.po  fil.po  fr.po  fy.po  gl.po  he.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  ko.po  (+37 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+164 more)
src/: Agent.vala  CMakeLists.txt  Geoclue2Dialog.vala  Interfaces.vala  Utils.vala
vapi/: geoclue2.vapi  libgeoclue-2.0.vapi
